Fix --enable-preview for spring-boot maven plugin (#105)